# dalechall

./: README.md  corpus.json  dale.py  example.txt  pyproject.toml  result.json
data/: scrabble.json
